<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/state_ut"
        android:textAllCaps="true"
        android:textColor="@android:color/black"

         />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/cnfmd"
        android:textAllCaps="true"
        android:textColor="@color/deep_red"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/active"
        android:textAllCaps="true"
        android:textColor="@color/deep_blue"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/rcvrd"
        android:textAllCaps="true"
        android:textColor="@color/deep_green"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/deaths"
        android:textAllCaps="true"
        android:textColor="@android:color/black"/>
</LinearLayout>